# Homework-2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  PERFORMANCE.md  Performance.md  README.md  cmake_install.cmake  main  main.cpp  matmul  matrix  performance_i7-2640m_2.80GHz.md  performance_ryzen-5-5600x_3.7GHz.md  results.csv  results.ipynb  results_summary.txt  run_all_tests.sh  test_block.cpp  test_parrellel.cpp
data/0/: naive_result.raw  result.raw  result_blocked.raw
data/1/: naive_result.raw  result.raw  result_ikj.raw
data/10/: blocked_result.raw  input0.raw  input1.raw
data/2/: parallel_result.raw  result.raw  result_blocked_omp.raw
data/3/: blocked_result.raw  result.raw  result_blocked_omp.raw
data/4/: blocked_result.raw  result.raw  result_blocked_omp.raw
data/5/: parallel_result.raw  result.raw  result_ijk.raw
data/6/: parallel_result.raw  result.raw  result_blocked.raw  result_ikj.raw  result_omp.raw
data/7/: naive_result.raw  result.raw  result_ijk.raw
data/8/: parallel_result.raw  result.raw  result_ikj.raw
data/9/: blocked_8_result.raw  naive_result.raw  result.raw  result_block.raw  result_ijk.raw  result_naive.raw
src/: main.cpp
